--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.cloudbees.jenkins.plugins</groupId>
-    <artifactId>jenkins-plugins</artifactId>
-    <version>56</version>
+    <groupId>org.jenkins-ci.plugins</groupId>
+    <artifactId>plugin</artifactId>
+    <version>3.18</version>
   </parent>
 
   <artifactId>timemachine</artifactId>
@@ -17,9 +17,8 @@
   <description>Record changes to Jenkins configuration in a git repo so one can track changes and revert them</description>
 
   <properties>
-    <jenkins.version>2.32.2</jenkins.version>
+    <jenkins.version>2.60.3</jenkins.version>
     <java.level>8</java.level>
-    <jenkins-test-harness.version>2.13</jenkins-test-harness.version>
   </properties>
 
 
@@ -27,7 +26,13 @@
     <dependency>
       <groupId>org.eclipse.jgit</groupId>
       <artifactId>org.eclipse.jgit</artifactId>
-      <version>4.9.0.201710071750-r</version>
+      <version>5.1.3.201810200350-r</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.jcraft</groupId>
+          <artifactId>jzlib</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
