--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>3.18</version>
   </parent>
 
+  <groupId>io.jenkins.plugins</groupId>
   <artifactId>timemachine</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>hpi</packaging>
