--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,17 @@
   <description>Record changes to Jenkins configuration in a git repo so one can track changes and revert them</description>
 
   <properties>
-    <jenkins.version>2.60.3</jenkins.version>
+    <jenkins.version>2.73.3</jenkins.version>
     <java.level>8</java.level>
   </properties>
 
-
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>https://opensource.org/licenses/MIT</url>
+    </license>
+  </licenses>
+  
   <dependencies>
     <dependency>
       <groupId>org.eclipse.jgit</groupId>
@@ -36,6 +42,21 @@
       </exclusions>
     </dependency>
   </dependencies>
+
+  <developers>
+    <developer>
+      <id>ndeloof</id>
+      <name>Nicolas De Loof</name>
+      <email>nicolas.deloof@gmail.com</email>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
+    <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
+  </scm>
+
 
   <repositories>
     <repository>
